[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/deep_fryer.png" type="Texture" id=1]
[ext_resource path="res://assets/oil_boiling_f2.png" type="Texture" id=2]
[ext_resource path="res://assets/oil_boiling_f4.png" type="Texture" id=3]
[ext_resource path="res://assets/oil_boiling_f1.png" type="Texture" id=4]
[ext_resource path="res://assets/oil_boiling_f3.png" type="Texture" id=5]
[ext_resource path="res://assets/light100x100.png" type="Texture" id=6]
[ext_resource path="res://components/deep_fryer/DeepFryer.gd" type="Script" id=7]
[ext_resource path="res://assets/sounds/deep_fryer/relay.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/deep_fryer/deep_fryer_idle_sound_loop.wav" type="AudioStream" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="DeepFryer" type="Node2D"]
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.5, 30 )
scale = Vector2( 1.00649, 1 )
frames = SubResource( 1 )
frame = 2
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="LightGreen" type="Light2D" parent="."]
position = Vector2( -65, -44 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )
color = Color( 0.0705882, 0.682353, 0.0509804, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="LightRed" type="Light2D" parent="."]
position = Vector2( -52, -43 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )
texture_scale = 1.2
color = Color( 1, 0, 0, 1 )
energy = 1.1
__meta__ = {
"_edit_lock_": true
}

[node name="AudioRelay" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, -31 )
stream = ExtResource( 8 )
volume_db = -19.0

[node name="OilIdle" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, 40 )
stream = ExtResource( 9 )
volume_db = -24.233
